# OpenClassifer

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  verify_installation.py
monitoring/: prometheus.yml
nginx/: nginx.conf
open_classifier/: main.py
open_classifier/api/: __init__.py  models.py  router.py
open_classifier/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  security.py
open_classifier/models/: __init__.py  agent.py  dspy_classifier.py  embeddings.py  langchain_classifier.py
open_classifier/services/: __init__.py  classifier_service.py
open_classifier/utils/: __init__.py  cache.py  data_utils.py  performance.py  text_utils.py
scripts/: deploy.sh
tests/: __init__.py  conftest.py  test_api.py  test_benchmarks.py  test_core.py  test_integration.py  test_models.py
